feat : 회원가입시 role 부여 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://springboot-database.ctkr9agv9dw6.ap-northeast-2.rds.amazonaws.com:3306/mydb
-spring.datasource.username=admin
-spring.datasource.password=cnehfdl951982!
+spring.datasource.url=jdbc:mysql://localhost:3306/khlv3
+spring.datasource.username=root
+spring.datasource.password=cnehfdl951982!@#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
