--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+build.gradle
+settings.gradle
+**/application.properties
+
 ### STS ###
 .apt_generated
 .classpath
